<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chronos.themeprojectitsmap_201270746.Wizard.WizardActivityFragment">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
            android:textSize="36sp"
            android:text="New Activity"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/wizard_new_activity_text"
            android:fontFamily="sans-serif-medium"
            />

        <TextView style="@style/WizardFormLabel"
            android:text="@string/wizard_label_activity_name"
            android:fontFamily="sans-serif-medium"
            />

        <EditText android:id="@+id/activity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:saveEnabled="false"
            android:inputType="textCapWords"
            android:hint="@string/wizard_hint_activity_name"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-medium"/>

        <TextView style="@style/WizardFormLabel"
            android:text="@string/wizard_label_activity_duration"
            android:fontFamily="sans-serif-medium"/>

        <EditText android:id="@+id/activity_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:saveEnabled="false"
            android:inputType="numberSigned"
            android:hint="@string/wizard_hint_activity_duration"
            android:fontFamily="sans-serif-medium"/>

    </LinearLayout>

</FrameLayout>
