<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.chronos.themeprojectitsmap_201270746.Wizard.WizardGpsFragment">

    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:textSize="36sp"
        android:text="@string/wizard_gps_title"
        android:fontFamily="sans-serif-medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/wizard_gps_text"
        android:fontFamily="sans-serif-medium"
        />

    <View
        android:background="?android:attr/dividerHorizontal"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/wizard_gps_switch_text"
            android:fontFamily="sans-serif-medium"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            android:id="@+id/wizard_gps_switch"
            />
    </LinearLayout>

    <View
        android:background="?android:attr/dividerHorizontal"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        />

</LinearLayout>
