<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.chronos.themeprojectitsmap_201270746.Wizard.WizardDontDisturbFragment">

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:textSize="36sp"
        android:text="@string/wizard_dont_disturb_mode_title"
        android:fontFamily="sans-serif-medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/wizard_dont_disturb_mode_text"
        android:fontFamily="sans-serif-medium"
        />

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:textSize="20sp"
        android:text="@string/wizard_time_slot_1"
        android:fontFamily="sans-serif-medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/wizard_timepicker_from"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_timepicker_to"
            android:fontFamily="sans-serif-medium"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:inputType="datetime"
            android:focusable="false"
            android:ems="10"
            android:hint="From"
            android:id="@+id/editText_notDisturbMode1_from"
            android:fontFamily="sans-serif-medium"
            />

        <EditText
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:focusable="false"
            android:ems="10"
            android:hint="To"
            android:id="@+id/editText_notDisturbMode1_to"
            android:fontFamily="sans-serif-medium"
            />

    </LinearLayout>

    <View
        android:background="?android:attr/dividerHorizontal"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        />

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:textSize="20sp"
        android:text="@string/wizard_time_slot_2"
        android:fontFamily="sans-serif-medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/wizard_timepicker_from"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_timepicker_to"
            android:fontFamily="sans-serif-medium"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:inputType="datetime"
            android:focusable="false"
            android:ems="10"
            android:hint="From"
            android:id="@+id/editText_notDisturbMode2_from"
            android:fontFamily="sans-serif-medium"
            />

        <EditText
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:focusable="false"
            android:ems="10"
            android:hint="To"
            android:id="@+id/editText_notDisturbMode2_to"
            android:fontFamily="sans-serif-medium"
            />

    </LinearLayout>

    <View
        android:background="?android:attr/dividerHorizontal"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        />

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:textSize="20sp"
        android:text="@string/wizard_time_slot_3"
        android:fontFamily="sans-serif-medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/wizard_timepicker_from"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_timepicker_to"
            android:fontFamily="sans-serif-medium"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:inputType="datetime"
            android:focusable="false"
            android:ems="10"
            android:hint="From"
            android:id="@+id/editText_notDisturbMode3_from"
            android:fontFamily="sans-serif-medium"
            />

        <EditText
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:focusable="false"
            android:ems="10"
            android:hint="To"
            android:id="@+id/editText_notDisturbMode3_to"
            android:fontFamily="sans-serif-medium"
            />

    </LinearLayout>

</LinearLayout>
